<?xml version="1.0"?>
<package format="2">
  <name>my_package</name>
  <version>0.0.0</version>
  <description>The my_package package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="tarek@todo.todo">tarek</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>TODO</license>

  <!-- Optional URL tags -->
  <!-- <url type="website">http://wiki.ros.org/my_package</url> -->

  <!-- Optional author tags -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <!-- Dependency tags -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <test_depend>gtest</test_depend> <!-- Optional, if you use testing -->
  <doc_depend>doxygen</doc_depend> <!-- Optional, if you generate documentation -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
